raffia/tests/error/scss/at-rule/function/varargs-multiple.snap
---
source: raffia/tests/error.rs
---
error: expect token `)`, but `$var` received
  ┌─ varargs-multiple.scss:1:26
  │
1 │ @function test($param...,$rest...) {}
  │                          ^^^^^


